--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
     testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
+    testCompile("org.mockito:mockito-core:2.23.4")
 }
+
 
 bootRun.environment([
         "WELCOME_MESSAGE": "hello"
