--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,26 @@
+import org.flywaydb.gradle.task.FlywayMigrateTask
+
+
+buildscript {
+
+    ext {
+        springBootVersion = "2.0.6.RELEASE"
+    }
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+    }
+}
+
 
 plugins {
     id "java"
     id "org.springframework.boot" version "2.0.6.RELEASE"
-}
-
-//ext["springBootVersion"] = "2.0.6.RELEASE"
-ext {
-    springBootVersion = "2.0.6.RELEASE"
+    id "org.flywaydb.flyway" version "5.2.4"
 }
 
 repositories {
@@ -14,16 +28,40 @@ repositories {
 }
 
 dependencies {
+
+    ext {
+        springBootVersion = "2.0.6.RELEASE"
+    }
+
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
+    compile("org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion")
+    compile("mysql:mysql-connector-java:6.0.6")
     testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
     testCompile("org.mockito:mockito-core:2.23.4")
 }
 
+//ext["springBootVersion"] = "2.0.6.RELEASE"
 
+
+def developmentDbUrl = "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 bootRun.environment([
-        "WELCOME_MESSAGE": "hello"
+        "WELCOME_MESSAGE": "hello",
+        "SPRING_DATASOURCE_URL": developmentDbUrl,
 ])
 
+def testDbUrl = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 test.environment([
-        "WELCOME_MESSAGE": "Hello from test"
+        "WELCOME_MESSAGE": "Hello from test",
+        "SPRING_DATASOURCE_URL": testDbUrl,
 ])
+
+flyway {
+    url = developmentDbUrl
+    user = "tracker"
+    password = ""
+    locations = ["filesystem:databases/tracker/migrations"]
+}
+
+task testMigrate(type: FlywayMigrateTask) {
+    url = testDbUrl
+}
